fix: removed white space that appears when searching for a user

--- a/styles/pages/home.scss
+++ b/styles/pages/home.scss
@@ -9,6 +9,7 @@
 
 body {
     border: 5px solid #1DB954;
+    background-color: black;
 }
 
 main {
